oris/src/etc/config/grafana_prometheus_configs/grafana-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - grafana.hall912-sm.ews.gic.ericsson.se
    port:
      name: http
      number: 80
      protocol: HTTP
