oris/src/etc/config/grafana_prometheus_configs/monitoring-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prometheus-monitoring-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - prometheus-monitoring-oss-deploy.hall912-sm.ews.gic.ericsson.se
    port:
      name: http
      number: 80
      protocol: HTTP
