oris/src/etc/config/grafana_prometheus_configs/prometheus-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prometheus-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - prometheus.hall912-sm.ews.gic.ericsson.se
    port:
      name: http
      number: 80
      protocol: HTTP
