oris/src/etc/config/grafana_prometheus_configs/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
  - host: 'grafana.huracan-az.athtem.eei.ericsson.se'
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
