oris/src/etc/config/grafana_prometheus_configs/grafana-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: grafana-se
spec:
  hosts:
  - grafana.grafana.svc.cluster.local
  location: MESH_EXTERNAL
  ports:
  - name: http
    number: 80
    protocol: HTTP
  resolution: DNS
