oris/src/etc/config/grafana_prometheus_configs/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
    name: grafana-vs
spec:
  gateways:
  - grafana-gw
  hosts:
  - grafana.hall912-sm.ews.gic.ericsson.se
  http:
  - name: grafana
    route:
    - destination:
        host: grafana.grafana.svc.cluster.local
        port:
          number: 80
