oris/src/etc/config/grafana_prometheus_configs/monitoring-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: monitoring-se
spec:
  hosts:
  - eric-pm-server-external.monitoring.svc.cluster.local
  location: MESH_EXTERNAL
  ports:
  - name: http
    number: 9090
    protocol: HTTP
  resolution: DNS
