oris/src/etc/config/grafana_prometheus_configs/monitoring-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
    name: prometheus-monitoring-vs
spec:
  gateways:
  - prometheus-monitoring-gw
  hosts:
  - prometheus-monitoring.oss-deploy.hall912-sm.ews.gic.ericsson.se
  http:
  - name: prometheus
    route:
    - destination:
        host: eric-pm-server-external.monitoring.svc.cluster.local
        port:
          number: 9090
